--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Django==1.11.4
-djangorestframework==3.6.4
 Pillow==4.2.1
+PyJWT==1.5.3
+djangorestframework==3.6.4
+djangorestframework-jwt==1.11.0
+gunicorn==19.7.1
+olefile==0.44
 pytz==2017.2
 six==1.10.0
 sorl-thumbnail==12.3
-gunicorn==19.7.1
