--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
 Django==1.11.4
 Pillow==4.2.1
 PyJWT==1.5.3
+certifi==2017.11.5
+chardet==3.0.4
+defusedxml==0.5.0
 djangorestframework==3.6.4
 djangorestframework-jwt==1.11.0
 gunicorn==19.7.1
+idna==2.6
+oauthlib==2.0.6
 olefile==0.44
+pip==9.0.1
+python3-openid==3.1.0
 pytz==2017.2
+requests==2.18.4
+requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==2.0.0
+social-auth-core==1.5.0
 sorl-thumbnail==12.3
+urllib3==1.22
