--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ python3-openid==3.1.0
 pytz==2017.3
 requests==2.18.4
 requests-oauthlib==0.8.0
+rest-social-auth==1.2.0
 six==1.11.0
 social-auth-app-django==1.2.0
 social-auth-core==1.5.0
