--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,15 @@ django-braces==1.12.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
+djangorestframework-jwt==1.11.0
+future==0.16.0
+gunicorn==19.7.1
 idna==2.6
 oauthlib==2.0.6
+olefile==0.44
+pycryptodomex==3.4.7
+pyjwkest==1.4.0
+python-social-auth==0.3.6
 python3-openid==3.1.0
 pytz==2017.3
 requests==2.18.4
