--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==19.7.1
 idna==2.6
 oauthlib==2.0.6
 olefile==0.44
+psycopg2==2.7.3.2
 pycryptodomex==3.4.7
 pyjwkest==1.4.0
 python-social-auth==0.3.6
