--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,6 +1,6 @@
 FROM tutum/nginx
 
-ADD sites-enabled/ /etc/nginx/sites-enabled/
-COPY nginx.conf /etc/nginx/nginx.conf
+ADD sites-enabled/ /usr/src/front/sites-enabled/
+COPY nginx.conf /usr/src/front/nginx.conf
 # RUN rm /etc/nginx/sites-enabled/default
 EXPOSE 80
