make nginx conf

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -5,4 +5,6 @@ RUN rm /etc/nginx/sites-enabled/default
 ADD sites-enabled/ /etc/nginx/sites-enabled
 RUN rm /etc/nginx/nginx.conf
 ADD nginx.conf /etc/nginx/nginx.conf
+RUN touch /var/log/nginx/front-access.log
+RUN touch /var/log/nginx/front-error.log
 CMD service nginx restart
