nginx.conf edited online with Bitbucket

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -1,6 +1,4 @@
-user www-data;
-worker_processes 3;
-pid /run/nginx.pid;
+worker_processes 1;
 
 events {
  worker_connections 1024;
@@ -8,28 +6,33 @@ events {
 
 http {
 
- sendfile on;
- tcp_nopush on;
- tcp_nodelay on;
- keepalive_timeout 65;
- types_hash_max_size 2048;
-
- include /etc/nginx/mime.types;
- default_type application/octet-stream;
-
- access_log /var/log/nginx/access.log;
- error_log /var/log/nginx/error.log;
-
- gzip on;
- gzip_disable "msie6";
-
- include /etc/nginx/conf.d/*.conf;
- include /etc/nginx/sites-enabled/front;
-
  client_body_buffer_size 64m;
-    client_header_buffer_size 16m;
-    client_max_body_size 512m;
-    large_client_header_buffers 2 16m;
+ client_header_buffer_size 16m;
+ client_max_body_size 512m;
+ large_client_header_buffers 2 16m;
+ 
+ sendfile on;
 
+ gzip              on;
+ gzip_http_version 1.0;
+ gzip_proxied      any;
+ gzip_min_length   500;
+ gzip_disable      "MSIE [1-6]\.";
+ gzip_types        text/plain text/xml text/css
+                   text/comma-separated-values
+                   text/javascript
+                   application/x-javascript
+                   application/atom+xml;
+
+ server {
+  listen 80;
+  server_name sp-lutsk.com;
+  charset utf-8;
+
+  location / {
+   alias /usr/src/front;
+  }
+ }
 }
+
 daemon off;
