--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -1,4 +1,3 @@
-user www-data;
 worker_processes 1;
 
 events {
@@ -29,10 +28,9 @@ http {
   listen 80;
   server_name sp-lutsk.com;
   charset utf-8;
+  index index.html index.htm index.php;
 
-  location / {
-   alias /usr/src/front;
-  }
+  root /usr/src/front;
  }
 }
 
