--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -3,6 +3,7 @@ RUN apt-get update
 RUN service nginx upgrade
 RUN rm /etc/nginx/nginx.conf
 ADD nginx.conf /etc/nginx/nginx.conf
+RUN mkdir /usr/src/front
+ADD . /usr/src/front
+WORKDIR /usr/src/front
 CMD service nginx restart
-RUN chown -R www-data /usr/src/front
-RUN chmod 755 /usr/src/front
