--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -6,7 +6,7 @@ events {
 
 http {
     sendfile on;
-    index index.html index.htm index.php;
+    index index.html index.htm;
 
     gzip               on;
     gzip_http_version  1.0;
@@ -18,14 +18,12 @@ http {
                        text/javascript
                        application/x-javascript
                        application/atom+xml;
-
     server {
         listen 80;
-        server_name sp-lutsk.com;
+        server_name www.sp-lutsk.com sp-lutsk.com;
         charset utf-8;
 
         root /usr/src/front;
     }
 }
-
 daemon off;
