Add new locations in nginx.conf (/login, /about) && update index.html

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -23,7 +23,17 @@ http {
         server_name www.sp-lutsk.com sp-lutsk.com;
         charset utf-8;
 
-        root /usr/src/front;
+        location / {
+          root /usr/src/front;
+        }
+
+        location /login/ {
+          root /usr/src/front/templates/;
+        }
+
+        location /about/ {
+          root /usr/src/front/templates/;
+        }
     }
 }
 daemon off;
