--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -8,6 +8,8 @@ http {
     sendfile on;
     index index.html index.htm;
 
+    include  /etc/nginx/mime.types;
+
     gzip               on;
     gzip_http_version  1.0;
     gzip_proxied       any;
