--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,6 +5,7 @@ certifi==2017.11.5
 chardet==3.0.4
 defusedxml==0.5.0
 django-braces==1.12.0
+django-cors-headers==2.1.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
