update views in accounts.app

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@ venv/
 api/static/rest_framework/
 api/logs/
 api/files/static/
-api/files/media/*
+api/files/
 !api/files/media/empty.jpg
 
+*.log
 *.env
 *.pyc
 *.sqlite3
