--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,10 @@
-Django==1.11.7
-Pillow==4.2.1
-PyJWT==1.5.3
 certifi==2017.11.5
 chardet==3.0.4
 defusedxml==0.5.0
+Django==1.11.7
 django-braces==1.12.0
 django-cors-headers==2.1.0
+django-filter==1.1.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
 djangorestframework==3.7.3
@@ -15,9 +14,11 @@ gunicorn==19.7.1
 idna==2.6
 oauthlib==2.0.6
 olefile==0.44
+Pillow==4.2.1
 psycopg2==2.7.3.2
 pycryptodomex==3.4.7
 pyjwkest==1.4.0
+PyJWT==1.5.3
 python-social-auth==0.3.6
 python3-openid==3.1.0
 pytz==2017.3
