--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,5 @@
+boto3==1.7.16
+botocore==1.10.16
 certifi==2017.11.5
 chardet==3.0.4
 defusedxml==0.5.0
@@ -7,11 +9,14 @@ django-cors-headers==2.1.0
 django-filter==1.1.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.0.8
+django-storages==1.6.6
 djangorestframework==3.7.3
 djangorestframework-jwt==1.11.0
+docutils==0.14
 future==0.16.0
 gunicorn==19.7.1
 idna==2.6
+jmespath==0.9.3
 oauthlib==2.0.6
 olefile==0.44
 Pillow==4.2.1
@@ -19,12 +24,14 @@ psycopg2==2.7.3.2
 pycryptodomex==3.4.7
 pyjwkest==1.4.0
 PyJWT==1.5.3
+python-dateutil==2.7.2
 python-social-auth==0.3.6
 python3-openid==3.1.0
 pytz==2017.3
 requests==2.18.4
 requests-oauthlib==0.8.0
 rest-social-auth==1.2.0
+s3transfer==0.1.13
 six==1.11.0
 social-auth-app-django==1.2.0
 social-auth-core==1.5.0
